# imu_3dm_gx4

./: .travis.yml  CMakeLists.txt  README.md  package.xml
addUdevRuleScript/: add_rule
calib/: imu_3dm_gx4_25.yaml  imu_3dm_gx4_25_noise.yaml
launch/: check_dt.launch  imu.launch  imu.rviz  imu_filter.launch  merge.launch
msg/: FilterOutput.msg  FilterStatus.msg
script/: add_rule  check_dt.py  imu_3dm_gx4.rules
src/: imu.cpp  imu.hpp  imu_3dm_gx4.cpp  merge_imu_filter.cpp
