<?xml version="1.0"?>
<package>
  <name>imu_3dm_gx4</name>
  <version>0.0.1</version>
  <description>The imu_3dm_gx4 package</description>

  <maintainer email="gcross.code@icloud.com">gcross</maintainer>
  <author>Gareth Cross</author>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>message_generation</buildtool_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>galt_common</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>galt_common</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
